--- a/front/contato.html
+++ b/front/contato.html
@@ -67,23 +67,23 @@
             <div class="card">
                 <h3>github.</h3>
                 <p>annaclarabragato</p>
-                <img src="images/github.png" alt="">
+                <img src="images/anna github.png" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
                 <p>natifss</p>
-                <img src="images/github.png" alt="">
+                <img src="images/nata github.jpg" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
-                <p>natifss</p>
-                <img src="images/github.png" alt="">
+                <p>AnaJuliaGPeres</p>
+                <img src="images/ana github.jpg" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
-                <p>natifss</p>
-                <img src="images/github.png" alt="">
+                <p>arthurlunkes</p>
+                <img src="images/arthur github.png" alt="">
             </div>
