--- a/front/contato.html
+++ b/front/contato.html
@@ -9,19 +9,15 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="sobre-o-grupo.html">sobre</a></li>
+            <li><a href="contato.html">contato</a></li>
+        </ul>
+    </nav>
     <h1>contatos para mais informações e github.</h1>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="#">sobre</a></li>
-                <li><a href="contato.html">contato</a></li>
-            </ul>
-        </nav>
-
-        <div class="container">
-            <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
-        </div>
 
         <script>
 
@@ -66,24 +62,36 @@
         <div class="content">
             <div class="card">
                 <h3>github.</h3>
-                <p>annaclarabragato</p>
-                <img src="images/anna github.png" alt="">
+                <p>annaclarabragato </p>
+                <img src="images/anna.png" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
                 <p>natifss</p>
-                <img src="images/nata github.jpg" alt="">
+                <img src="images/nati.jpeg" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
                 <p>AnaJuliaGPeres</p>
-                <img src="images/ana github.jpg" alt="">
+                <img src="images/ana.jpeg" alt="">
             </div>
 
             <div class="card">
                 <h3>github.</h3>
                 <p>arthurlunkes</p>
-                <img src="images/arthur github.png" alt="">
+                <img src="images/arthur.png" alt="">
             </div>
+
+        </div>
+
+    </div>
+
+    <div class="container">
+        <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
+    </div>
+
+</body>
+
+</html>
