--- a/front/logincadastro.html
+++ b/front/logincadastro.html
@@ -9,19 +9,15 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="sobre-o-grupo.html">sobre</a></li>
+            <li><a href="contato.html">contato</a></li>
+        </ul>
+    </nav>
     <h1>informações sobre login e cadastro.</h1>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="#">sobre</a></li>
-                <li><a href="contato.html">contato</a></li>
-            </ul>
-        </nav>
-
-        <div class="container">
-            <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
-        </div>
 
         <script>
             function toggleDarkMode() {
@@ -32,8 +28,8 @@
 
         <div class="content">
             <div class="card">
-                <h3>informações para cadastro no aplicativo.</h3>
-                <p>para realizar o cadastro no aplicativo é
+                <h3>Informações para cadastro no aplicativo.</h3>
+                <p>Para realizar o cadastro no aplicativo é
                     <br> necessário os seguintes campos pessoais: 
                     <br>nome completo, o e-mail, a senha e a confirmação 
                     <br> da mesma. após isto, você poderá realizar o login 
@@ -45,3 +41,13 @@
             <div class="card">
                 <img src="images/cadastro.png" alt="">
             </div>
+        </div>
+
+    </div>
+    <div class="container">
+        <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
+    </div>
+
+</body>
+
+</html>
