--- a/front/opcoes-cores.html
+++ b/front/opcoes-cores.html
@@ -9,19 +9,15 @@
 </head>
 
 <body>
-    <h1>opções de cores para a lâmpada.</h1>
+    <nav>
+        <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="sobre-o-grupo.html">sobre</a></li>
+            <li><a href="contato.html">contato</a></li>
+        </ul>
+    </nav>
+    <h1>Opções de cores para a lâmpada.</h1>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="#">sobre</a></li>
-                <li><a href="contato.html">contato</a></li>
-            </ul>
-        </nav>
-
-        <div class="container">
-            <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
-        </div>
 
         <script>
             function toggleDarkMode() {
@@ -42,3 +38,13 @@
                 <h3>paleta RGB.</h3>
                 <img src="images/controle.png" alt="">
             </div>
+
+        </div>
+
+    </div>
+    <div class="container">
+        <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
+    </div>
+</body>
+
+</html>
