--- a/front/sobre-o-grupo.html
+++ b/front/sobre-o-grupo.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="sobre-o-grupo.html">sobre</a></li>
+            <li><a href="contato.html">contato</a></li>
+        </ul>
+    </nav>
     <h1>mais informações sobre o grupo deste projeto: Rosie.</h1>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="#">sobre</a></li>
-                <li><a href="contato.html">contato</a></li>
-            </ul>
-        </nav>
+        
 
         <div class="container">
             <button id="dark-mode-btn" onclick="toggleDarkMode()">modo escuro</button>
@@ -32,14 +33,22 @@
 
         <div class="content">
             <div class="card">
-                <h3>grupo.</h3>
+                <h3>Nosso grupo</h3>
                 <p>o grupo Rosie é composto por quatro integrantes, sendo estes:
                     <br> ana julia, anna clara, arthur e natali. do curso de sistemas
                     <br> de informação, atualmente no quarto período. este projeto saiu
                     <br> da disciplica de projeto integrador extencionista, com o professor
-                    <br> rafael. 
+                    <br> Rafael. 
                 </p>
             </div>
             <div class="card">
                 <img src="images/grupo3.png" alt="">
             </div>
+
+        </div>
+
+    </div>
+
+</body>
+
+</html>
